static/css/main.css
:root {
  
  --color-primary: #ffc107;
  --color-secondary: #78c2ad;
}

.hero-image {

  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/campus1.jpg");
  /* Position and center the image to scale nicely on all screens */
  background-position: center;
  background-repeat: no-repeat;

  background-size: 100% auto

}

/* Place text in the middle of the image */
.hero-text {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}


.section-header-secondary {
  text-align: center;
  padding-bottom: 60px;
}

.section-header-secondary h2 {
  
  margin-bottom: 20px;
  padding-bottom: 20px;
  position: relative;
}
.section-header-secondary h2:after {
  content: "";
  position: absolute;
  display: block;
  width: 90px;
  height: 3px;
  background: var(--color-primary);
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
}


.section-header {
  text-align: center;
  padding-bottom: 60px;
}

.section-header h2 {
  
  margin-bottom: 20px;
  padding-bottom: 20px;
  position: relative;
}
.section-header h2:after {
  content: "";
  position: absolute;
  display: block;
  width: 90px;
  height: 3px;
  background: var(--color-primary);
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
}

.section-header h1 {
  
  margin-bottom: 20px;
  padding-bottom: 20px;
  position: relative;
}

.section-header h1:after {
  content: "";
  position: absolute;
  display: block;
  width: 90px;
  height: 3px;
  background: var(--color-primary);
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
}

.section-header p {
  margin-bottom: 0;
  color: #6f6f6f;
}
.custom-button {
    width: 120px !important;
}

.jumbotron-custom {
  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url("../images/Volunteer.jpeg");
  background-size: cover;

}

